src/objects/PR_Contact__c.object
<CustomObject>
    <description>Contact link to a project, one contact should be indentified as Primary</description>
    <fields>
        <fullName>ChkUniqueContact__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field is used to insure a contact can only appear once in the PR Conact list.</description>
        <inlineHelpText>Not to be viewed by other than Admins.</inlineHelpText>
        <label>ChkUniqueContact</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <description>Used to hold contact id so can delete from here if we delete contacts</description>
        <formula>Contact__r.Id</formula>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Project_Reference__c</fullName>
        <description>Default is &quot;N&quot;, &quot;Y&quot; indentifies the Primary reference</description>
        <inlineHelpText>Only 1 Primary reference can be selected</inlineHelpText>
        <label>Contact Primary Project Reference</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Project_Role__c</fullName>
        <label>Contact Project Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Project_Seq__c</fullName>
        <description>Display sequence</description>
        <inlineHelpText>The sequence in which the projects will display on the project record.</inlineHelpText>
        <label>Contact Project Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>PR_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_Comments__c</fullName>
        <description>Comments about the reference about his status on the current project</description>
        <label>Contact Reference Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_Quality__c</fullName>
        <description>Use to qalify the reference</description>
        <label>Contact Reference Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check before using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Projects</relationshipLabel>
        <relationshipName>PR_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactsDsp__c</fullName>
        <formula>Contact__r.FirstName  &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>ContactsDsp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Contact_Last_Checked__c</fullName>
        <label>Date Contact Last Checked</label>
        <type>Date</type>
    </fields>
    <label>PR Contact</label>
    <nameField>
        <displayFormat>PRCon-{00000}</displayFormat>
        <label>PRContactID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>